# gmk

./: .gitignore  Cargo.toml  Makefile  README.md  demo.tape
.github/workflows/: audit.yml  ci.yml  release.yml  vhs.yml
Formula/: gmk.rb
src/: cli.rs  config.rs  git.rs  main.rs  ui.rs
