[package]
name = "gmk"
version = "0.1.0"
edition = "2024"
description = "🚀 Bookmark & Interactive Git Clone Tool"
repository = "https://github.com/kanywst/gmk"
homepage = "https://github.com/kanywst/gmk"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
skim = "0.15"
colored = "2.0"
regex = "1.11"
directories = "5.0"
